--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </div>
         <div class="about__line"></div>
     </section>
-    <section id='services' class="s-services">
+    <!--<section id='services' class="s-services">
         <div class="row section-header has-bottom-sep" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">What We Do</h3>
@@ -244,7 +244,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <section id='Gallery' class="s-works">
         <div class="intro-wrap">       
             <div class="row section-header has-bottom-sep light-sep" data-aos="fade-up">
