--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
                 <h5>Java</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">90</div><p>/100</p>
+                <div class="stats__count">96</div><p>/100</p>
                 <h5>DBMS</h5>
             </div>
             <div class="col-block stats__col">
                 <div class="stats__count">95</div><p>/100</p>
-                <h5>Projects</h5>
+                <h5>Frontend</h5>
             </div>
             <div class="col-block stats__col">
-                <div class="stats__count">90</div><p>/100</p>
-                <h5></h5> 
+                <div class="stats__count">95</div><p>/100</p>
+                <h5>Document</h5>
             </div>
         </div>
         <div class="about__line"></div>
@@ -416,8 +416,7 @@
         </div>
     </section>
 
-    <section id="clients" class="s-clients">
-
+    <!--<section id="clients" class="s-clients">
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h3 class="subhead">Our Clients</h3>
@@ -475,7 +474,7 @@
                 </div>        
             </div>
         </div>
-    </section>
+    </section>-->
     <section id="contact" class="s-contact">
         <div class="overlay"></div>
         <div class="contact__line"></div>
@@ -504,7 +503,7 @@
         <div class="row footer-bottom">
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Glint 2021</span> 
+                    <span>© Copyright leehayoung 2023</span> 
                     <span>Portfolio</span>	
                 </div>
                 <div class="go-top">
